# sdatic

./: CMakeLists.txt  README.md
docs/: index.html
include/: sdatic.h
src/: console.cpp  sdatic.cpp  sdatic.h
